     Pseudo local potential was incorrectly written and read. 
   * PP: incorrect check in bands.f90 (v.5.0.2 only)
   * CP wasn't working properly with USPP having distinct Q functions 
     for each value of l, due to the never ending l/l+1 problem

Incompatible changes in svn version:
   * calls to "find_equiv_sites" and "writemodes" changed (fixed dimension
     "nax" removed)

New in 5.0.2 version:

   * DFT+U with on-site occupations from pseudopotential projectors;
     DFT+U+J (both experimental)
   * Calculation of orbital magnetization (experimental)

Fixed in 5.0.2 version:

   * the random-number generator wasn't checking for incorrect seeding;
     under some unlikely circumstances this might lead to strange errors
   * k-point parallelization in v.5.0 and 5.0.1 was affected by a subtle 
     problem: the distribution of plane waves was not always the same on 
     all pools of processors. While results were still correct, strange
     problems (e.g. lockups) could result. Also: there are more and more
     machines that are not able to produce the same results starting from
     the same data on different processors. Charge-density mixing is now
     performed on one pool, broadcast to all others, to prevent trouble.
   * upftools: fhi2upf converter of v.5 introduced a small error in some cases
   * Small error in the calculation of rPW86 functional, due to a mismatch
     between its previous definition (Slater exchange contained in GGA) and
     the check on the rho=>0, grad rho=>0 limits. Note that a similar problem
     might also affect hcth, olyp, m06l functionals. 
     The new PBEQ2D functional (introduced in 5.0.1) was also not correct.
   * NEB calculation can get stuck if the code tries to read &ions namelist
     in the PWscf-related input section
   * NEB: spurious blank character appearing in lines longer than 80 characters
     with Intel compiler (same problem that was previously fixed in PWscf)