@@ -248,18 +248,13 @@ CONTAINS
     USE control_flags,    ONLY : io_level
     IMPLICIT NONE
     LOGICAL            :: exst
+    !
     ! ... nwordwfc is the record length (IN COMPLEX WORDS)
     ! ... for the direct-access file containing wavefunctions
+    ! ... io_level > 0 : open a file; io_level <= 0 : open a buffer
+    !
     nwordwfc = nbnd*npwx*npol
-
-    ! ... iunwfc=10: read/write wfc from/to file
-    ! ... iunwfc=-1: copy wfc to/from RAM
-    IF ( io_level > 0 ) THEN
-      iunwfc = 10
-    ELSE
-      iunwfc = -1
-    END IF
-    CALL open_buffer( iunwfc, 'wfc', nwordwfc, nks, exst )
+    CALL open_buffer( iunwfc, 'wfc', nwordwfc, io_level, exst )
 
     ! ... Needed for LDA+U
     ! ... iunat  contains the (orthogonalized) atomic wfcs
